networking/cptest2/deny_all_ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-ingress
  namespace: cptest2
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
